feat: added endpoint to get requested journeys
