# routes/index.js
@@ -7,44 +7,14 @@ const {JourneyRepository} = require('../model/journeyRepository');
 const {PriceCalculator} = require('../model/priceCalculator');
 const {Modality} = require('../model/modality');
 /* const {Auth} = */require('../model/auth');
+const {DistanceCalculator} = require('../model/distanceCalculator')
 
 const journeyRouter = express.Router();
 const journeyRepository = new JourneyRepository();
+const distanceCalculator = new DistanceCalculator();
 
 const logger = require('../utils/logger');
 
-function distance(lat1, lon1, lat2, lon2, unit) {
-	if ((lat1 == lat2) && (lon1 == lon2)) {
-		return 0;
-	}
-	else {
-		var radlat1 = Math.PI * lat1/180;
-		var radlat2 = Math.PI * lat2/180;
-		var theta = lon1-lon2;
-		var radtheta = Math.PI * theta/180;
-		var dist = Math.sin(radlat1) * Math.sin(radlat2) + Math.cos(radlat1) * Math.cos(radlat2) * Math.cos(radtheta);
-		if (dist > 1) {
-			dist = 1;
-		}
-		dist = Math.acos(dist);
-		dist = dist * 180/Math.PI;
-		dist = dist * 60 * 1.1515;
-		if (unit=="K") { dist = dist * 1.609344 }
-		if (unit=="N") { dist = dist * 0.8684 }
-		return dist;
-	}
-}
-function isShortDistance(journey, lat1, lng1){
-  console.log("lat1 ", lat1, " lng2: " ,lng1);
-  console.log("lat2: ", journey.from[0], " lng2: " ,journey.from[1]);
-  dist = distance(lat1, lng1, journey.from[0], journey.from[1], "K");
-  console.log(dist);
-  if (dist <= 5){
-      console.log("entre");
-      return true;
-  }
-  return false;
-}
 
 function returnJourney(response, journey, message) {
   if (!journey) {
@@ -72,16 +42,15 @@ journeyRouter.route('/info')
       }
     });
 
-journeyRouter.post("/request", async(req, res) =>{
+journeyRouter.get("/requested", async(req, res) =>{
   const journeys = await journeyRepository.getJourneysRequested("requested");
-  console.log(journeys);
-  const lat_request = req.body.lat;
-  const lng_request = req.body.lng;
-  console.log("lat: ", lat_request);
-  console.log("lng: ", lng_request);
-  const journeysNear = journeys.filter(element => {
-    if (isShortDistance(element, lat_request, lng_request)){
-         return element;
+  const location = req.query.location.split(',')
+  const lat_request = location[0];
+  const lng_request = location[1];
+  const distanceCalculator = new DistanceCalculator();
+  const journeysNear = journeys.filter(journey => {
+    if (distanceCalculator.isShort(journey.from, lat_request, lng_request)){
+         return journey;
     }
   })
   res.send(journeysNear);
